Fixes layout issue on tablets + some other tweaks

--- a/content/assets/stylesheets/_display.sass
+++ b/content/assets/stylesheets/_display.sass
@@ -23,7 +23,8 @@ footer
 
 .contact-small
   display: block
-  margin: 0 auto 2em
+  margin: 0 auto 1em
+  font-size: 200%
 
 .pull-right-for-medium-up
   float: right
@@ -40,7 +41,7 @@ footer
     img
       float: none
       display: block
-      margin: 0 auto
+      margin: 1em auto 1em
 
   footer
     p
